cambios iconos varios

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/gestion-rclamo-api-uade.appspot.com/o/icons8-configuraci%C3%B3n-3-50.png?alt=media&token=9316dafb-ec89-40d7-8cb1-79276a1dcc8b" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link
@@ -16,7 +16,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Gestion Reclamos</title>
   </head>
   <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
